fix: 561 - layout issue

--- a/src/widgets/required/ui/required/required.module.scss
+++ b/src/widgets/required/ui/required/required.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
 
   .course-module-columns-layout {
+    display: flex;
     gap: 8rem;
 
     .course-module-elements-column {
